src/parser/quark_parser.go
// Code generated from src/parser/QuarkParser.g4 by ANTLR 4.7.2. DO NOT EDIT.

package parser // QuarkParser

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "':'", "';'", "','", "'..'", "'.'", "'_'", "'?'", "'('", "')'", "'['",
	"']'", "'{'", "'}'", "'!('", "'=>'", "'='", "'+'", "'+='", "'-'", "'-='",
	"'*'", "'*='", "'/'", "'/='", "'%'", "'%='", "'&'", "'&='", "'~&'", "'|'",
	"'|='", "'~|'", "'^'", "'^='", "'~^'", "'<<'", "'<<='", "'>>'", "'>>='",
	"'<<<'", "'<<<='", "'>>>'", "'>>>='", "'<'", "'>'", "'~'", "'and'", "'or'",
	"'not'", "'implies'", "'equates'", "'<='", "'>='", "'=='", "'!='", "'module'",
	"'def'", "'if'", "'else'", "'elif'", "'for'", "'in'", "'has'", "'struct'",
	"'abstract'", "'type'", "'enum'", "'return'", "'import'", "'match'", "'case'",
	"'future'", "'lambda'", "'clock'", "'reset'", "'reg'", "'var'", "'new'",
	"'mut'", "'signal'", "'trait'", "'//'", "'/*'", "", "", "", "", "'@'",
	"", "", "", "'*/'",
}
var symbolicNames = []string{
	"", "COLON", "SEMI", "COMMA", "DOUBLE_DOT", "DOT", "UNDERSCORE", "QUESTION_MARK",
	"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LCURLY", "RCURLY", "PARAM_OPEN",
	"OP_ARROW", "OP_ASSIGN", "OP_ADD", "OP_ADD_ASSIGN", "OP_SUB", "OP_SUB_ASSIGN",
	"OP_MUL", "OP_MUL_ASSIGN", "OP_DIV", "OP_DIV_ASSIGN", "OP_MOD", "OP_MOD_ASSIGN",
	"OP_BAND", "OP_BAND_ASSIGN", "OP_BNAND", "OP_BOR", "OP_BOR_ASSIGN", "OP_BNOR",
	"OP_XOR", "OP_XOR_ASSIGN", "OP_XNOR", "OP_LEFT_SHIFT", "OP_LEFT_SHIFT_ASSIGN",
	"OP_RIGHT_SHIFT", "OP_RIGHT_SHIFT_ASSIGN", "OP_ARITH_LEFT_SHIFT", "OP_ARITH_LEFT_SHIFT_ASSIGN",
	"OP_ARITH_RIGHT_SHFIT", "OP_ARITH_RIGHT_SHIFT_ASSIGN", "LANGLE", "RANGLE",
	"OP_COMPLIMENT", "OP_LAND", "OP_LOR", "OP_LNOT", "OP_IMPLICATION", "OP_EQUIVALENCE",
	"OP_LTE", "OP_GTE", "OP_EQ", "OP_NEQ", "KW_MODULE", "KW_DEF", "KW_IF",
	"KW_ELSE", "KW_ELIF", "KW_FOR", "KW_IN", "KW_HAS", "KW_STRUCT", "KW_ABSTRACT",
	"KW_TYPE", "KW_ENUM", "KW_RETURN", "KW_IMPORT", "KW_MATCH", "KW_CASE",
	"KW_FUTURE", "KW_LAMBDA", "KW_CLOCK", "KW_RESET", "KW_REG", "KW_VAR", "KW_NEW",
	"KW_MUT", "KW_SIGNAL", "KW_TRAIT", "COMMENT_START", "BLOCK_COMMENT_START",
	"DECIMAL", "INTEGRAL", "BIT_VECTOR_PATTERN_TOKEN", "REAL_NAME", "ANNOTATION_START",
	"WS", "NEW_LINE", "ANYCHAR", "BLOCK_COMMENT_END", "BLOCK_COMMENT_CHAR",
}

var ruleNames = []string{
	"quarkpackage", "decl", "importdecl", "block", "assignment", "stmt", "assignable",
	"realname", "name", "clockexpr", "expr", "callarglist", "callarg", "paramarglist",
	"concat", "innerconcat", "typeexpr", "paramarg", "branch", "pattern", "param_pattern",
	"inner_array_pattern", "parameterlist", "parameterdef", "returnlist", "argumentdef",
	"argumentlist", "enumdecl", "enumconstructordecl", "enumargdef", "structdecl",
	"fielddecl", "funcsig", "funcdecl", "moduledecl", "traitdecl", "annotation",
	"literal",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type QuarkParser struct {
	*antlr.BaseParser
}

func NewQuarkParser(input antlr.TokenStream) *QuarkParser {
	this := new(QuarkParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "QuarkParser.g4"

	return this
}

// QuarkParser tokens.
const (
	QuarkParserEOF                         = antlr.TokenEOF
	QuarkParserCOLON                       = 1
	QuarkParserSEMI                        = 2
	QuarkParserCOMMA                       = 3
	QuarkParserDOUBLE_DOT                  = 4
	QuarkParserDOT                         = 5
	QuarkParserUNDERSCORE                  = 6
	QuarkParserQUESTION_MARK               = 7
	QuarkParserLPAREN                      = 8
	QuarkParserRPAREN                      = 9
	QuarkParserLBRACE                      = 10
	QuarkParserRBRACE                      = 11
	QuarkParserLCURLY                      = 12
	QuarkParserRCURLY                      = 13
	QuarkParserPARAM_OPEN                  = 14
	QuarkParserOP_ARROW                    = 15
	QuarkParserOP_ASSIGN                   = 16
	QuarkParserOP_ADD                      = 17
	QuarkParserOP_ADD_ASSIGN               = 18
	QuarkParserOP_SUB                      = 19
	QuarkParserOP_SUB_ASSIGN               = 20
	QuarkParserOP_MUL                      = 21
	QuarkParserOP_MUL_ASSIGN               = 22
	QuarkParserOP_DIV                      = 23
	QuarkParserOP_DIV_ASSIGN               = 24
	QuarkParserOP_MOD                      = 25
	QuarkParserOP_MOD_ASSIGN               = 26
	QuarkParserOP_BAND                     = 27
	QuarkParserOP_BAND_ASSIGN              = 28
	QuarkParserOP_BNAND                    = 29
	QuarkParserOP_BOR                      = 30
	QuarkParserOP_BOR_ASSIGN               = 31
	QuarkParserOP_BNOR                     = 32
	QuarkParserOP_XOR                      = 33
	QuarkParserOP_XOR_ASSIGN               = 34
	QuarkParserOP_XNOR                     = 35
	QuarkParserOP_LEFT_SHIFT               = 36
	QuarkParserOP_LEFT_SHIFT_ASSIGN        = 37
	QuarkParserOP_RIGHT_SHIFT              = 38
	QuarkParserOP_RIGHT_SHIFT_ASSIGN       = 39
	QuarkParserOP_ARITH_LEFT_SHIFT         = 40
	QuarkParserOP_ARITH_LEFT_SHIFT_ASSIGN  = 41
	QuarkParserOP_ARITH_RIGHT_SHFIT        = 42
	QuarkParserOP_ARITH_RIGHT_SHIFT_ASSIGN = 43
	QuarkParserLANGLE                      = 44
	QuarkParserRANGLE                      = 45
	QuarkParserOP_COMPLIMENT               = 46
	QuarkParserOP_LAND                     = 47
	QuarkParserOP_LOR                      = 48
	QuarkParserOP_LNOT                     = 49
	QuarkParserOP_IMPLICATION              = 50
	QuarkParserOP_EQUIVALENCE              = 51
	QuarkParserOP_LTE                      = 52
	QuarkParserOP_GTE                      = 53
	QuarkParserOP_EQ                       = 54
	QuarkParserOP_NEQ                      = 55
	QuarkParserKW_MODULE                   = 56
	QuarkParserKW_DEF                      = 57
	QuarkParserKW_IF                       = 58
	QuarkParserKW_ELSE                     = 59
	QuarkParserKW_ELIF                     = 60
	QuarkParserKW_FOR                      = 61
	QuarkParserKW_IN                       = 62
	QuarkParserKW_HAS                      = 63
	QuarkParserKW_STRUCT                   = 64
	QuarkParserKW_ABSTRACT                 = 65
	QuarkParserKW_TYPE                     = 66
	QuarkParserKW_ENUM                     = 67
	QuarkParserKW_RETURN                   = 68
	QuarkParserKW_IMPORT                   = 69
	QuarkParserKW_MATCH                    = 70
	QuarkParserKW_CASE                     = 71
	QuarkParserKW_FUTURE                   = 72
	QuarkParserKW_LAMBDA                   = 73
	QuarkParserKW_CLOCK                    = 74
	QuarkParserKW_RESET                    = 75
	QuarkParserKW_REG                      = 76
	QuarkParserKW_VAR                      = 77
	QuarkParserKW_NEW                      = 78
	QuarkParserKW_MUT                      = 79
	QuarkParserKW_SIGNAL                   = 80
	QuarkParserKW_TRAIT                    = 81
	QuarkParserCOMMENT_START               = 82
	QuarkParserBLOCK_COMMENT_START         = 83
	QuarkParserDECIMAL                     = 84
	QuarkParserINTEGRAL                    = 85
	QuarkParserBIT_VECTOR_PATTERN_TOKEN    = 86
	QuarkParserREAL_NAME                   = 87
	QuarkParserANNOTATION_START            = 88
	QuarkParserWS                          = 89
	QuarkParserNEW_LINE                    = 90
	QuarkParserANYCHAR                     = 91
	QuarkParserBLOCK_COMMENT_END           = 92
	QuarkParserBLOCK_COMMENT_CHAR          = 93
)

// QuarkParser rules.
const (
	QuarkParserRULE_quarkpackage        = 0
	QuarkParserRULE_decl                = 1
	QuarkParserRULE_importdecl          = 2
	QuarkParserRULE_block               = 3
	QuarkParserRULE_assignment          = 4
	QuarkParserRULE_stmt                = 5
	QuarkParserRULE_assignable          = 6
	QuarkParserRULE_realname            = 7
	QuarkParserRULE_name                = 8
	QuarkParserRULE_clockexpr           = 9
	QuarkParserRULE_expr                = 10
	QuarkParserRULE_callarglist         = 11
	QuarkParserRULE_callarg             = 12
	QuarkParserRULE_paramarglist        = 13
	QuarkParserRULE_concat              = 14
	QuarkParserRULE_innerconcat         = 15
	QuarkParserRULE_typeexpr            = 16
	QuarkParserRULE_paramarg            = 17
	QuarkParserRULE_branch              = 18
	QuarkParserRULE_pattern             = 19
	QuarkParserRULE_param_pattern       = 20
	QuarkParserRULE_inner_array_pattern = 21
	QuarkParserRULE_parameterlist       = 22
	QuarkParserRULE_parameterdef        = 23
	QuarkParserRULE_returnlist          = 24
	QuarkParserRULE_argumentdef         = 25
	QuarkParserRULE_argumentlist        = 26
	QuarkParserRULE_enumdecl            = 27
	QuarkParserRULE_enumconstructordecl = 28
	QuarkParserRULE_enumargdef          = 29
	QuarkParserRULE_structdecl          = 30
	QuarkParserRULE_fielddecl           = 31
	QuarkParserRULE_funcsig             = 32
	QuarkParserRULE_funcdecl            = 33
	QuarkParserRULE_moduledecl          = 34
	QuarkParserRULE_traitdecl           = 35
	QuarkParserRULE_annotation          = 36
	QuarkParserRULE_literal             = 37
)

// IQuarkpackageContext is an interface to support dynamic dispatch.
type IQuarkpackageContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsQuarkpackageContext differentiates from other interfaces.
	IsQuarkpackageContext()
}

type QuarkpackageContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQuarkpackageContext() *QuarkpackageContext {
	var p = new(QuarkpackageContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QuarkParserRULE_quarkpackage
	return p
}

func (*QuarkpackageContext) IsQuarkpackageContext() {}

func NewQuarkpackageContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QuarkpackageContext {
	var p = new(QuarkpackageContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QuarkParserRULE_quarkpackage

	return p
}

func (s *QuarkpackageContext) GetParser() antlr.Parser { return s.parser }

func (s *QuarkpackageContext) EOF() antlr.TerminalNode {
	return s.GetToken(QuarkParserEOF, 0)
}

func (s *QuarkpackageContext) AllImportdecl() []IImportdeclContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IImportdeclContext)(nil)).Elem())
	var tst = make([]IImportdeclContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IImportdeclContext)
		}
	}

	return tst
}

func (s *QuarkpackageContext) Importdecl(i int) IImportdeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IImportdeclContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IImportdeclContext)
}

func (s *QuarkpackageContext) AllDecl() []IDeclContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IDeclContext)(nil)).Elem())
	var tst = make([]IDeclContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IDeclContext)
		}
	}

	return tst
}

func (s *QuarkpackageContext) Decl(i int) IDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDeclContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IDeclContext)
}

func (s *QuarkpackageContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QuarkpackageContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QuarkpackageContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuarkParserListener); ok {
		listenerT.EnterQuarkpackage(s)
	}
}

func (s *QuarkpackageContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuarkParserListener); ok {
		listenerT.ExitQuarkpackage(s)
	}
}

func (s *QuarkpackageContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case QuarkParserVisitor:
		return t.VisitQuarkpackage(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *QuarkParser) Quarkpackage() (localctx IQuarkpackageContext) {
	localctx = NewQuarkpackageContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, QuarkParserRULE_quarkpackage)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(79)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == QuarkParserKW_IMPORT {
		{
			p.SetState(76)
			p.Importdecl()
		}

		p.SetState(81)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(85)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for (((_la-56)&-(0x1f+1)) == 0 && ((1<<uint((_la-56)))&((1<<(QuarkParserKW_MODULE-56))|(1<<(QuarkParserKW_DEF-56))|(1<<(QuarkParserKW_STRUCT-56))|(1<<(QuarkParserKW_ENUM-56))|(1<<(QuarkParserKW_TRAIT-56)))) != 0) || _la == QuarkParserANNOTATION_START {
		{
			p.SetState(82)
			p.Decl()
		}

		p.SetState(87)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(88)
		p.Match(QuarkParserEOF)
	}

	return localctx
}

// IDeclContext is an interface to support dynamic dispatch.
type IDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDeclContext differentiates from other interfaces.
	IsDeclContext()
}

type DeclContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclContext() *DeclContext {
	var p = new(DeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QuarkParserRULE_decl
	return p
}

func (*DeclContext) IsDeclContext() {}

func NewDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclContext {
	var p = new(DeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QuarkParserRULE_decl

	return p
}

func (s *DeclContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclContext) Structdecl() IStructdeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStructdeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStructdeclContext)
}

func (s *DeclContext) Funcdecl() IFuncdeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFuncdeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFuncdeclContext)
}

func (s *DeclContext) Moduledecl() IModuledeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IModuledeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IModuledeclContext)
}

func (s *DeclContext) Traitdecl() ITraitdeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITraitdeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITraitdeclContext)
}

func (s *DeclContext) Enumdecl() IEnumdeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEnumdeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IEnumdeclContext)
}

func (s *DeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuarkParserListener); ok {
		listenerT.EnterDecl(s)
	}
}

func (s *DeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuarkParserListener); ok {
		listenerT.ExitDecl(s)
	}
}

func (s *DeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case QuarkParserVisitor:
		return t.VisitDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *QuarkParser) Decl() (localctx IDeclContext) {
	localctx = NewDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, QuarkParserRULE_decl)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(95)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(90)
			p.Structdecl()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(91)
			p.Funcdecl()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(92)
			p.Moduledecl()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(93)
			p.Traitdecl()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(94)
			p.Enumdecl()
		}

	}

	return localctx
}

// IImportdeclContext is an interface to support dynamic dispatch.
type IImportdeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsImportdeclContext differentiates from other interfaces.
	IsImportdeclContext()
}

type ImportdeclContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImportdeclContext() *ImportdeclContext {
	var p = new(ImportdeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QuarkParserRULE_importdecl
	return p
}

func (*ImportdeclContext) IsImportdeclContext() {}

func NewImportdeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportdeclContext {
	var p = new(ImportdeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QuarkParserRULE_importdecl

	return p
}

func (s *ImportdeclContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportdeclContext) CopyFrom(ctx *ImportdeclContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *ImportdeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportdeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type MultiImportContext struct {
	*ImportdeclContext
}

func NewMultiImportContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *MultiImportContext {
	var p = new(MultiImportContext)

	p.ImportdeclContext = NewEmptyImportdeclContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ImportdeclContext))

	return p
}

func (s *MultiImportContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MultiImportContext) KW_IMPORT() antlr.TerminalNode {
	return s.GetToken(QuarkParserKW_IMPORT, 0)
}

func (s *MultiImportContext) Name() INameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INameContext)
}

func (s *MultiImportContext) DOT() antlr.TerminalNode {
	return s.GetToken(QuarkParserDOT, 0)
}

func (s *MultiImportContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(QuarkParserLPAREN, 0)
}

func (s *MultiImportContext) AllRealname() []IRealnameContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IRealnameContext)(nil)).Elem())
	var tst = make([]IRealnameContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IRealnameContext)
		}
	}

	return tst
}

func (s *MultiImportContext) Realname(i int) IRealnameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRealnameContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IRealnameContext)
}

func (s *MultiImportContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(QuarkParserRPAREN, 0)
}

func (s *MultiImportContext) SEMI() antlr.TerminalNode {
	return s.GetToken(QuarkParserSEMI, 0)
}

func (s *MultiImportContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(QuarkParserCOMMA)
}

func (s *MultiImportContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(QuarkParserCOMMA, i)
}

func (s *MultiImportContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuarkParserListener); ok {
		listenerT.EnterMultiImport(s)
	}
}

func (s *MultiImportContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuarkParserListener); ok {
		listenerT.ExitMultiImport(s)
	}
}

func (s *MultiImportContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case QuarkParserVisitor:
		return t.VisitMultiImport(s)

	default:
		return t.VisitChildren(s)
	}
}

type SingleImportContext struct {
	*ImportdeclContext
}

func NewSingleImportContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *SingleImportContext {
	var p = new(SingleImportContext)

	p.ImportdeclContext = NewEmptyImportdeclContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ImportdeclContext))

	return p
}

func (s *SingleImportContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SingleImportContext) KW_IMPORT() antlr.TerminalNode {
	return s.GetToken(QuarkParserKW_IMPORT, 0)
}

func (s *SingleImportContext) Name() INameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INameContext)
}

func (s *SingleImportContext) SEMI() antlr.TerminalNode {
	return s.GetToken(QuarkParserSEMI, 0)
}

func (s *SingleImportContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuarkParserListener); ok {
		listenerT.EnterSingleImport(s)
	}
}

func (s *SingleImportContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QuarkParserListener); ok {
		listenerT.ExitSingleImport(s)
	}
}
